[package]
name = "bitter-jam-entry"
version = "0.1.0"
authors = ["JC Holder <jc@thirdtruck.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.8"

rand = "0.7.3"

slotmap = "0.4.0"

# ggez = { git = "https://github.com/ggez/ggez", rev = "84935d7e762ec43392c354f621b03a5600454d14" }
ggez = "0.5.1"
