[package]
name = "sweet-turnips"
version = "0.1.0"
authors = ["JC Holder <jc@thirdtruck.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.11"

rand = "0.7.3"

slotmap = "0.4.0"

ggez = "0.5.1"
